--- a/Project_Final.ipynb
+++ b/Project_Final.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Optimal Market Share Strategy in Markets with Positive Feedbacks\n",
     "\n",
-    "### Sam Leathers, Bosco De Enrique Romeu\n",
+    "### Sam Leathers\n",
     "\n",
     "#### Abstract"
    ]
